--- a/resum.html
+++ b/resum.html
@@ -46,7 +46,7 @@
           <div class="skil">
             <h2>skil</h2>
             <ul>
-                <li>work1</li>
+                <li>work1work1work1</li>
                 <li>work2</li>
                 <li>work3</li>
               </ul>
