--- a/test.html
+++ b/test.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 <body>
-    88888321
-</body>
+    <div class="hstack gap-3">
+        <div class="bg-dark text-primary border border-success">First item</div>
+        <div class="bg-light border ms-auto">Second item</div>
+        <div class="vr"></div>
+        <div class="bg-light border">Third item</div>
+      </div>
+ </body>
 <script src="./bootstrap.bundle.min.js"></script>
 </html>
